fixed align error

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1, h2{
 }
 
 p{
-  float: center;
+  float: left;
   text-align: center;
   font-family: "Roboto Mono", sans-serif;
   color: white;
